--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@reduxjs/toolkit": "^2.4.0",
     "lucide-react": "^0.460.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
+    "react-redux": "^9.1.2",
     "react-router": "^7.0.1",
     "react-router-dom": "^7.0.1",
+    "react-toastify": "^10.0.6",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
